Changelog
=========


4.2.2 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Fix radio and checkbox elements shrinking when using a long label (Sage Abdullah)
 * Fix: Fix select elements expanding beyond their container when using a long option label (Sage Abdullah)


4.2.1 (13.03.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Support creating `StructValue` copies (Tidiane Dia)
 * Fix: Fix image uploads on storage backends that require file pointer to be at the start of the file (Matt Westcott)
 * Fix: Fix "Edit this page" missing from userbar (Satvik Vashisht)
 * Fix: Prevent audit log report from failing on missing models (Andy Chosak)
 * Fix: Fix page/snippet cannot proceed a `GroupApprovalTask` if it's locked by someone outside of the group (Sage Abdullah)
 * Fix: Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)
 * Fix: Fix timezone activation leaking into subsequent requests in `require_admin_access()` (Stefan Hammer)
 * Fix: Fix dialog component's message to have rounded corners at the top side (Sam)
 * Fix: Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)
 * Fix: Prevent duplicate addition of StreamField blocks with the new block picker (Deepam Priyadarshi)
 * Docs: Clarify `ClusterableModel` requirements for using relations with `RevisionMixin`-enabled models (Sage Abdullah)
 * Maintenance: Update Algolia DocSearch to use new application and correct versioning setup (Thibaud Colas)


4.2 (06.02.2023)
~~~~~~~~~~~~~~~~

 * Added StreamField data migration helpers (Sandil Ranasinghe, Jacob Topp-Mugglestone, Joshua Munn, Karl Hobley)
 * Added ability to lock snippet models with `LockableMixin` (Sage Abdullah)
 * Added ability to submit snippets for moderation with `WorkflowMixin` (Sage Abdullah)
 * Create `{% fullpageurl %}` tag for getting the absolute URL of a page (Jake Howard)